# adsbdb_updater

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  create_release.sh  docker-compose.yml  input.csv  run.sh
.github/: release-body.md
.github/workflows/: new_release.yml
src/: app_error.rs  callsign.rs  main.rs  parse_env.rs
src/db/: mod.rs  model_airport.rs  model_flightroute.rs
src/n_number/: mod.rs
