[package]
name = "adsbdb_updater"
version = "0.1.0"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "adsbdb updater"
repository = "https://github.com/mrjackwills/adsbdb_updater"
license = "MIT"
readme = "README.md"

[dependencies]
csv = "1.1.6"
dotenvy = "0.15"
once_cell = "1.17"
redis = { version = "0.22", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version ="0.6", features = ["runtime-tokio-rustls", "postgres", "time"] }
thiserror = "1.0"
tokio = { version = "1.26", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version ="0.3", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip=true
debug = false


